--- a/public/work_exp.html
+++ b/public/work_exp.html
@@ -77,7 +77,7 @@
                         <span class="pillar color2">TEACHER ASSISTANT (TA)</span>
                         <p class="heading">Advanced Game Development</p>
                         <div class="meta">
-                            <span>June - Sep 2022 (4 Months)</span>
+                            <span>2023 - Present</span>
                         </div>
                     </header>
                 </div>
@@ -103,7 +103,7 @@
                         <span class="pillar color2">TEACHER ASSISTANT (TA)</span>
                         <p class="heading">COMPUTER GRAPHIC AND ANIMATION</p>
                         <div class="meta">
-                            <span>June - Sep 2022 (4 Months)</span>
+                            <span>2022 - 2022</span>
                         </div>
                     </header>
                 </div>
@@ -116,13 +116,16 @@
                         <span class="pillar color2">TEACHER ASSISTANT (TA)</span>
                         <p class="heading">PROBLEM SOLVING IN INFORMATION TECHNOLOGY</p>
                         <div class="meta">
-                            <span>June - Sep 2022 (4 Months)</span>
+                            <span>2020 - 2021</span>
                         </div>
                     </header>
                 </div>
 
             </div>
         </div>
+          <a href="index.html" class="btn-1 blue">
+            BACK
+          </a>
         <footer class="text-center text-white bg-neutral-800">
             <div class="container pt-5">
               <div class="mb-5 flex justify-center">
@@ -171,7 +174,7 @@
           
             <div class="bg-neutral-900 p-3 text-center text-neutral-700 dark:bg-neutral-800 dark:text-neutral-200" style="font-size: 0.7vw;">
               © 2023 Copyright:
-              <a class="text-neutral-900 dark:text-neutral-400" href="https://tailwind-elements.com/">Tailwind Elements</a>
+              <a class="text-neutral-900 dark:text-neutral-400">Nattawat Chavanit</a>
             </div>
           </footer>
 </body>
