--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
-    <title>PORTFOLIO</title>
+    <link rel="icon" type="image/x-icon" href="/img/icon.png">
+    <title>NATTAWAT PORTFOLIO</title>
 </head>
 <body>
     <nav class="bg-navbar">
@@ -149,7 +150,7 @@
             <div class="menu-header-container">
               <h1>MY WORK <span class="text-hl">EXPERIENCE*</span> </h1>
             </div></a> 
-          <a href="/" class="menu-header-box menu-header-2">
+          <a href="work.html" class="menu-header-box menu-header-2">
             <div class="menu-header-container">
               <h1>MY <span class="text-hl">WORK*</span> </h1>
             </div>
