--- a/public/programm.html
+++ b/public/programm.html
@@ -70,7 +70,7 @@
         <div class="container-second mx-auto py-7 bg-fade">
             <div class="grid grid-cols-3 max-[600px]:grid-cols-1 place-items-center">
 
-                <div class="card">
+                <a class="card" href="/public/programm/double-tic.html">
                     <figure class="thumbnail">
                         <img src="/img/programm-card1.png" class="image-bg">
                     </figure>
@@ -81,9 +81,9 @@
                             <span>Web Design and Development Project</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
-                <div class="card">
+                <a class="card">
                     <figure class="thumbnail">
                         <img src="/img/programm-card2.png" class="image-bg">
                     </figure>
@@ -94,9 +94,9 @@
                             <span>Multimedia Programming Project</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
-                <div class="card">
+                <a class="card">
                     <figure class="thumbnail">
                         <img src="/img/work-card2.png" class="image-bg">
                     </figure>
@@ -107,9 +107,9 @@
                             <span>Multimedia Programming Project</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
-                <div class="card">
+                <a class="card">
                     <figure class="thumbnail">
                         <img src="/img/programm-card4.png" class="image-bg">
                     </figure>
@@ -120,7 +120,7 @@
                             <span>Web Technology</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
             </div>
         </div>
