--- a/public/index.html
+++ b/public/index.html
@@ -92,17 +92,20 @@
                     VISUAL 3D AND GAME DEVELOPER FIELD.</p>
             </div>
             <div class="text-box-1 fade-in-left-12s">
-                <a href="/" class="text-gray-50 text-sz-sm ">ABOUT <span class="hover-text-hl">MY PORTFOLIO</span></a>
+                <a href="#sec-third" class="text-gray-50 text-sz-sm ">ABOUT <span  class="hover-text-hl">MY PORTFOLIO</span></a>
             </div>
           </div>
       </section>
 
       <section id="aboutme">
         <div class="container-second mx-auto py-7 content-center">
-          <h1 class="text-center text-sz-nr text-gray-50">ABOUT ME</h1> 
+          <h1 class="text-center text-sz-nr text-gray-50">ABOUT ME</h1>
+          <div class="justify-center mb-profile-box">
+            <img class="profile_pic" src="/img/headshot_photo_webPort1.png" style="width: 30vw;">
+          </div>
           <div class="flex justify-center">
             <div class="flex my-10 gap-10">
-              <div class="">
+              <div class="profile-box">
                 <img class="profile_pic" src="/img/headshot_photo_webPort1.png" style="width: 30vw;">
               </div>
               <div class="grow">
@@ -214,7 +217,7 @@
           </div>
         </div>
       
-        <div class="bg-neutral-900 p-3 text-center text-neutral-700 dark:bg-neutral-800 dark:text-neutral-200" style="font-size: 0.7vw;">
+        <div class="bg-neutral-900 p-3 text-center text-neutral-700 dark:bg-neutral-800 dark:text-neutral-200 footer-des">
           © 2023 Copyright:
           <a class="text-neutral-900 dark:text-neutral-400">Nattawat Chavanit</a>
         </div>
