Fixed index navigate

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
       <section id="sec-third">
         <div class="container-second mx-auto py-7">
-          <a href="work_exp.html" class="menu-header-box menu-header-1">
+          <a href="/public/work_exp.html" class="menu-header-box menu-header-1">
             <div class="menu-header-container">
               <h1>MY WORK <span class="text-hl">EXPERIENCE*</span> </h1>
             </div></a> 
-          <a href="work.html" class="menu-header-box menu-header-2">
+          <a href="/public/work.html" class="menu-header-box menu-header-2">
             <div class="menu-header-container">
               <h1>MY <span class="text-hl">WORK*</span> </h1>
             </div>
