Fixed index navigate

--- a/public/work.html
+++ b/public/work.html
@@ -80,7 +80,7 @@
 
             </div>
         </div>
-          <a href="index.html#sec-third" class="btn-1 blue back-btn">
+          <a href="/index.html#sec-third" class="btn-1 blue back-btn">
             BACK
           </a>
         <footer class="text-center text-white bg-neutral-800">
