--- a/public/gamedev.html
+++ b/public/gamedev.html
@@ -58,7 +58,7 @@
                     </header>
                 </div>
 
-                <div class="card">
+                <a class="card" href="/public/gamedev/augustfriend.html">
                     <figure class="thumbnail">
                         <img src="/img/work-exp-card2.png" class="image-bg">
                     </figure>
@@ -69,9 +69,9 @@
                             <span>Advanced Game Development Project</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
-                <div class="card">
+                <a class="card" href="/public/gamedev/christmas2023.html">
                     <figure class="thumbnail">
                         <img src="/img/GameDev2.gif" class="image-bg">
                     </figure>
@@ -82,9 +82,9 @@
                             <span>3D Environment Design</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
-                <div class="card">
+                <a class="card" href="/public/gamedev/thelastwar.html">
                     <figure class="thumbnail">
                         <img src="/img/GameDev1.gif" class="image-bg">
                     </figure>
@@ -95,7 +95,7 @@
                             <span>3D Environment Design</span>
                         </div>
                     </header>
-                </div>
+                  </a>
 
                 <div class="card">
                     <figure class="thumbnail">
@@ -112,7 +112,7 @@
 
             </div>
         </div>
-          <a href="work.html" class="btn-1 blue back-btn">
+          <a onclick="history.back()" class="btn-1 blue back-btn">
             BACK
           </a>
         <footer class="text-center text-white bg-neutral-800">
