--- a/public/programm/deepdown.html
+++ b/public/programm/deepdown.html
@@ -101,7 +101,7 @@
                 <br>
                 <p class="text-caution">** This website doesn't support mobile responsive design. **</p>
                 <br>
-                <a href="https://deepdownastronomically.netlify.app/" class="visit-btn">VISIT</a>
+                <a href="https://deepdownastronomically.netlify.app/" target="_blank" class="visit-btn">VISIT</a>
             </div>
         </div>
     </div>
