--- a/public/programm/double-tic.html
+++ b/public/programm/double-tic.html
@@ -111,7 +111,7 @@
                     <img src="/img/icon/photoshop-icon.jpg" class="software-icon">
                 </div>
                 <br>
-                <a href="https://web-design-project1.web.app/" class="visit-btn">VISIT</a>
+                <a href="https://web-design-project1.web.app/" target="_blank" class="visit-btn">VISIT</a>
             </div>
         </div>
     </div>
