--- a/public/programm/garbage-house.html
+++ b/public/programm/garbage-house.html
@@ -93,7 +93,7 @@
                     <img src="/img/icon/vscode-icon.jpg" class="software-icon">
                 </div>
                 <br>
-                <a href="https://householdgarbage-itxnited.netlify.app/" class="visit-btn">VISIT</a>
+                <a href="https://householdgarbage-itxnited.netlify.app/" target="_blank" class="visit-btn">VISIT</a>
             </div>
         </div>
     </div>
