--- a/public/comgraph.html
+++ b/public/comgraph.html
@@ -178,7 +178,7 @@
 
             </div>
         </div>
-          <a href="work.html" class="btn-1 blue back-btn">
+          <a onclick="history.back()" class="btn-1 blue back-btn">
             BACK
           </a>
         <footer class="text-center text-white bg-neutral-800">
