--- a/public/programm/esa.html
+++ b/public/programm/esa.html
@@ -100,7 +100,7 @@
                 <br>
                 <p class="text-caution">** This website doesn't support mobile responsive design. **</p>
                 <br>
-                <a href="https://webtech-project2020.netlify.app/" class="visit-btn">VISIT</a>
+                <a href="https://webtech-project2020.netlify.app/" target="_blank" class="visit-btn">VISIT</a>
             </div>
         </div>
     </div>
