--- a/public/gamedev.html
+++ b/public/gamedev.html
@@ -97,7 +97,7 @@
                     </header>
                   </a>
 
-                <div class="card">
+                <a class="card" href="/public/gamedev/r_factory.html">
                     <figure class="thumbnail">
                         <img src="/img/GameDev3.gif" class="image-bg">
                     </figure>
@@ -108,7 +108,7 @@
                             <span>3D Environment Design</span>
                         </div>
                     </header>
-                </div>
+                </a>
 
             </div>
         </div>
