--- a/public/comgraph.html
+++ b/public/comgraph.html
@@ -196,14 +196,13 @@
         <footer class="text-center text-white bg-neutral-800">
             <div class="container pt-5">
               <div class="mb-5 flex justify-center">
-                <a href="https://www.facebook.com/profile.php?id=100003386253790" target="_blank" class="mr-9 text-neutral-800 dark:text-neutral-200">
+                <a href="mailto:nattawat.chavanit@gmail.com" target="_blank" class="mr-9 text-neutral-800 dark:text-neutral-200">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="h-4 w-4"
                     fill="currentColor"
-                    viewBox="0 0 24 24">
-                    <path
-                      d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
+                    viewBox="0 0 32 32">
+                    <path d="M16,14.81,28.78,6.6A3,3,0,0,0,27,6H5a3,3,0,0,0-1.78.6Z"></path><path d="M16.54,16.84h0l-.17.08-.08,0A1,1,0,0,1,16,17h0a1,1,0,0,1-.25,0l-.08,0-.17-.08h0L2.1,8.26A3,3,0,0,0,2,9V23a3,3,0,0,0,3,3H27a3,3,0,0,0,3-3V9a3,3,0,0,0-.1-.74Z">
                   </svg>
                 </a>
                 <a href="https://www.instagram.com/cgg_portfolio/" target="_blank" class="mr-9 text-neutral-800 dark:text-neutral-200">
