Update Showreel Link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       
                   <a href="#sec-third" class="nav-item px-3 py-2 rounded-md text-sm font-medium">PORTFOLIO</a>
 
+                  <a href="https://www.youtube.com/watch?v=CceRlY3532w" target="_blank" class="nav-item px-3 py-2 rounded-md text-sm font-medium">SHOWREEL</a>
+
                 </div>
               </div>
             </div>
@@ -112,7 +114,7 @@
               <div class="grow">
                 <h1 class="header-1"><span class="txt-highlight-3">OBJECTIVE</span></h1>
                 <p class="info">I am an enthusiastic individual with a passion for programming ,<br>
-                  looking for programmer field with well-known  studio in Thailand.<br>
+                  looking for game programmer field with well-known  studio in Thailand.<br>
                   And energetic approach to learning and collaborating with others.<br>
                   My goal is to contribute to the advancement of the company's <br>
                   projects, while also furthering my own growth and career <br>
