--- a/public/graphic/the_pandemic.html
+++ b/public/graphic/the_pandemic.html
@@ -40,7 +40,7 @@
                         <br>
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span>
-                        <span class="des-box-contain des-color5">#COMPOSIT</span>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
@@ -90,7 +90,7 @@
                         <br>
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span>
-                        <span class="des-box-contain des-color5">#COMPOSIT</span>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
