--- a/public/graphic/the_quiet_place.html
+++ b/public/graphic/the_quiet_place.html
@@ -39,6 +39,8 @@
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#CENCEPT ART</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span><br>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
+                        <span class="des-box-contain des-color5">#STORYTELLING</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
@@ -83,6 +85,8 @@
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#CENCEPT ART</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span><br>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
+                        <span class="des-box-contain des-color5">#STORYTELLING</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
