--- a/public/graphic/christmas2021.html
+++ b/public/graphic/christmas2021.html
@@ -39,7 +39,7 @@
                         <span class="des-box-contain des-color5">#LOOKDEV</span>
                         <br>
                         <span class="des-box-contain des-color5">#RENDER</span>
-                        <span class="des-box-contain des-color5">#COMPOSIT</span>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
@@ -89,7 +89,7 @@
                         <span class="des-box-contain des-color5">#LOOKDEV</span>
                         <br>
                         <span class="des-box-contain des-color5">#RENDER</span>
-                        <span class="des-box-contain des-color5">#COMPOSIT</span>
+                        <span class="des-box-contain des-color5">#COMPOSITE</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
