--- a/public/graphic/the_pandemic.html
+++ b/public/graphic/the_pandemic.html
@@ -41,6 +41,7 @@
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span>
                         <span class="des-box-contain des-color5">#COMPOSITE</span>
+                        <span class="des-box-contain des-color5">#STORYTELLING</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
@@ -91,6 +92,7 @@
                         <span class="des-box-contain des-color5">#RENDER</span>
                         <span class="des-box-contain des-color5">#DIGITAL PAINTING</span>
                         <span class="des-box-contain des-color5">#COMPOSITE</span>
+                        <span class="des-box-contain des-color5">#STORYTELLING</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
