--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
               </div>
               <div class="grow">
                 <h1 class="header-1"><span class="txt-highlight-3">OBJECTIVE</span></h1>
-                <p class="info">I am an enthusiastic individual with a passion for programming ,<br>
-                  looking for game programmer field with well-known  studio in Thailand.<br>
-                  And energetic approach to learning and collaborating with others.<br>
-                  My goal is to contribute to the advancement of the company's <br>
-                  projects, while also furthering my own growth and career <br>
-                  development within the field. </p>
+                <p class="info">I am a passionate individual with a strong interest in programming, <br> 
+                specifically in the field of game development. I am actively seeking <br> 
+                opportunities as a game programmer with well-known studios in <br>  
+                Thailand. I have an energetic approach to learning and enjoy <br>  
+                collaborating with others. My ultimate goal is to make valuable <br> 
+                contributions to the company's projects, while also continuing <br> 
+                to grow and develop my own skills and career within the industry.</p>
   
                 <h1 class="header-1 mt-5"><span class="txt-highlight-3">PERSONAL DETAILS</span></h1>
                 <p class="info"><span class="info-dot">■</span>   Name &emsp;&emsp;&emsp;&emsp; Nattawat Chavanit</p>
