--- a/public/gamedev/aws.html
+++ b/public/gamedev/aws.html
@@ -46,9 +46,10 @@
                     <p class="interest-item">
                         <span class="des-box-contain des-color5">#UNREAL ENGINE BLUEPRINT</span>
                         <span class="des-box-contain des-color5">#SIMULATION GAME</span>
-                        <span class="des-box-contain des-color5">#AIR COMBAT GAME</span>
+                        <span class="des-box-contain des-color5">#MULTIPLAYER</span>
                         <br>
                         <span class="des-box-contain des-color5">#ROYAL THAI AIRFORCE</span>
+                        <span class="des-box-contain des-color5">#AIR COMBAT GAME</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
@@ -110,9 +111,10 @@
                     <p class="interest-item">
                         <span class="des-box-contain des-color5">#UNREAL ENGINE BLUEPRINT</span>
                         <span class="des-box-contain des-color5">#SIMULATION GAME</span>
-                        <span class="des-box-contain des-color5">#AIR COMBAT GAME</span>
+                        <span class="des-box-contain des-color5">#MULTIPLAYER</span>
                         <br>
                         <span class="des-box-contain des-color5">#ROYAL THAI AIRFORCE</span>
+                        <span class="des-box-contain des-color5">#AIR COMBAT GAME</span>
                     </p>
                 </header>
                 <p class="text-des-sm">Software: </p>
