--- a/public/gamedev/nws.html
+++ b/public/gamedev/nws.html
@@ -47,8 +47,10 @@
                     <p class="interest-item">
                         <span class="des-box-contain des-color5">#UNREAL ENGINE BLUEPRINT</span>
                         <span class="des-box-contain des-color5">#SIMULATION GAME</span>
-                        <span class="des-box-contain des-color5">#NAVAL BATTLE GAME</span>
+                        <span class="des-box-contain des-color5">#MULTIPLAYER</span>
+
                         <br>
+                        <span class="des-box-contain des-color5">#NAVAL BATTLE GAME</span>
                         <span class="des-box-contain des-color5">#ROYAL THAI NAVY</span>
                     </p>
                 </header>
@@ -117,8 +119,9 @@
                     <p class="interest-item">
                         <span class="des-box-contain des-color5">#UNREAL ENGINE BLUEPRINT</span>
                         <span class="des-box-contain des-color5">#SIMULATION GAME</span>
-                        <span class="des-box-contain des-color5">#NAVAL BATTLE GAME</span>
+                        <span class="des-box-contain des-color5">#MULTIPLAYER</span>
                         <br>
+                        <span class="des-box-contain des-color5">#NAVAL BATTLE GAME</span>
                         <span class="des-box-contain des-color5">#ROYAL THAI NAVY</span>
                     </p>
                 </header>
