--- a/public/graphic/the_quiet_place.html
+++ b/public/graphic/the_quiet_place.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">the pandemic</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Digital art painting work (Personal Project)</span>
@@ -67,7 +67,7 @@
             
             </div>  
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">the quiet place</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Digital art painting work (Personal Project)</span>
