--- a/public/programm.html
+++ b/public/programm.html
@@ -19,7 +19,7 @@
       <div class="relative flex h-16 items-center justify-between">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
           <!-- Mobile menu button-->
-          <a class="fa fa-long-arrow-left back-icon" style="background-color: #3d3d3d; margin-left: 10px;" onclick="history.back()"></a>
+          <a class="fa fa-long-arrow-left back-icon" style="background-color: #3d3d3d; margin-left: 10px;" href="/public/work.html"></a>
         </div>
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
@@ -99,7 +99,7 @@
 
             </div>
         </div>
-          <a onclick="history.back()" class="btn-1 blue back-btn">
+          <a href="/public/work.html" class="btn-1 blue back-btn">
             BACK
           </a>
         <footer class="text-center text-white bg-neutral-800">
