--- a/public/programm/double-tic.html
+++ b/public/programm/double-tic.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">Double Tic-Tac-Toe</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Web Design and Development Project (3 members)</span>
@@ -74,7 +74,7 @@
             
             <!-- main sidebar -->
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">Double Tic-Tac-Toe</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Web Design and Development Project (3 members)</span>
