--- a/public/gamedev/augustfriend.html
+++ b/public/gamedev/augustfriend.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/gamedev.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">august friend of rohan</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Advanced Game Development Project (4 members)</span>
@@ -73,7 +73,7 @@
 
             </div>
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/gamedev.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">august friend of rohan</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Advanced Game Development Project (4 members)</span>
