--- a/public/gamedev/aws.html
+++ b/public/gamedev/aws.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/gamedev.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">air combat online simulation</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Freelance Project</span>
@@ -84,7 +84,7 @@
 
             </div>
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/gamedev.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">air combat warfare online simulation</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Freelance Project</span>
