--- a/public/graphic/guitar.html
+++ b/public/graphic/guitar.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">jasmine guitar</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>3D Computer Animation Project</span>
@@ -55,7 +55,7 @@
 
             </div>  
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">jasmine guitar</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Personal Project</span>
