--- a/public/graphic/nws_assets.html
+++ b/public/graphic/nws_assets.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">naval warfare online simulation assets</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Senior Project Assets</span>
@@ -74,7 +74,7 @@
 
             </div>  
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">Naval warfare online simulation assets</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Senior Project Assets</span>
