--- a/public/graphic/train.html
+++ b/public/graphic/train.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">alstom locomotive and third class train</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Personal Project</span>
@@ -65,7 +65,7 @@
 
             </div>  
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">alstom locomotive and third class train</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Personal Project</span>
