--- a/public/graphic/z-wing.html
+++ b/public/graphic/z-wing.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">z-wing animation for game</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>3D Computer Animation Project</span>
@@ -54,7 +54,7 @@
 
             </div>  
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/comgraph.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">z-wing animation for game</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>3D Computer Animation Project</span>
