--- a/public/programm/deepdown.html
+++ b/public/programm/deepdown.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">deepdown astronomicall</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Multimedia Programming Project (6 members)</span>
@@ -67,7 +67,7 @@
                 <img src="/img/webdev/deepdown-6.jpg" alt="" class="work-img">
             </div>
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">deepdown astronomically</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Multimedia Programming Project (6 members)</span>
