--- a/public/programm/esa.html
+++ b/public/programm/esa.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">esa ref. website development</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Web Technology Project (3 members)</span>
@@ -66,7 +66,7 @@
 
             </div>
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">esa ref. website development</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Web Technology Project (3 members)</span>
