--- a/public/programm/garbage-house.html
+++ b/public/programm/garbage-house.html
@@ -21,7 +21,7 @@
                 <!--mobile sidebar-->
 
                 <div class="sidebar-mob-des">
-                    <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                    <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                     <h1 class="text-des-header" style="margin-top: 1.5rem;">Household garbage</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Multimedia Programming Project (9 members)</span>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="col-span-1 side-bar">
-                <a class="fa fa-long-arrow-left back-icon" onclick="history.back()"></a>
+                <a class="fa fa-long-arrow-left back-icon" href="/public/programm.html"></a>
                 <h1 class="text-des-header" style="margin-top: 1.5rem;">Household garbage</h1>
                 <div class="meta" style="margin-bottom: 1.5rem;">
                     <span>Multimedia Programming Project (9 members)</span>
