--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <a href="#sec-third" class="nav-item px-3 py-2 rounded-md text-sm font-medium">PORTFOLIO</a>
 
                   <a href="https://www.youtube.com/watch?v=CceRlY3532w" target="_blank" class="nav-item px-3 py-2 rounded-md text-sm font-medium">SHOWREEL</a>
+                  
 
                 </div>
               </div>
@@ -76,6 +77,9 @@
             <a href="#aboutme" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">ABOUTME</a>
       
             <a href="#sec-third" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">PORTFOLIO</a>
+
+            <a href="https://www.youtube.com/watch?v=CceRlY3532w" target="_blank" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">SHOWREEL</a>
+
 
           </div>
         </div>
