--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="text-gray-50 text-sz-sm fade-in-left-1s" style="margin-bottom: 5vh;">WELCOME TO <span class="text-hl">MY PORTFOLIO.</span></p>
                 <p class="text-gray-50 text-sz-sm fade-in-left-12s">
                     I'M YOUNG DEVELOPER WITH A SPACIAL INTEREST IN <br>
-                    VISUAL 3D AND GAME DEVELOPER FIELD.</p>
+                    VISUAL 3D AND GAME DEVELOPMENT FIELD.</p>
             </div>
             <div class="text-box-1 fade-in-left-12s">
                 <a href="#sec-third" class="text-gray-50 text-sz-sm ">ABOUT <span  class="hover-text-hl">MY PORTFOLIO</span></a>
@@ -117,13 +117,14 @@
               </div>
               <div class="grow">
                 <h1 class="header-1"><span class="txt-highlight-3">OBJECTIVE</span></h1>
-                <p class="info">I am a passionate individual with a strong interest in programming, <br> 
-                specifically in the field of game development. I am actively seeking <br> 
-                opportunities as a game programmer with well-known studios in <br>  
-                Thailand. I have an energetic approach to learning and enjoy <br>  
-                collaborating with others. My ultimate goal is to make valuable <br> 
-                contributions to the company's projects, while also continuing <br> 
-                to grow and develop my own skills and career within the industry.</p>
+                <p class="info">I am a passionate individual with a strong interest in unreal engine, <br> 
+                specifically in the field of game development and unreal engine artist.<br> 
+                I am actively seeking opportunities as a game programmer or <br> 
+                unreal engine artist with well-known studios in Thailand.<br> 
+                I have an energetic approach to learning and enjoy collaborating <br> 
+                with others. My ultimate goal is to make valuable contributions <br> 
+                to the company's projects, while also continuing to grow and develop <br> 
+                my own skills and career within the industry.</p>
   
                 <h1 class="header-1 mt-5"><span class="txt-highlight-3">PERSONAL DETAILS</span></h1>
                 <p class="info"><span class="info-dot">■</span>   Name &emsp;&emsp;&emsp;&emsp; Nattawat Chavanit</p>
