Update about me details

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="text-gray-50 text-sz-sm fade-in-left-1s" style="margin-bottom: 5vh;">WELCOME TO <span class="text-hl">MY PORTFOLIO.</span></p>
                 <p class="text-gray-50 text-sz-sm fade-in-left-12s">
                     I'M YOUNG DEVELOPER WITH A SPACIAL INTEREST IN <br>
-                    VISUAL 3D AND GAME DEVELOPMENT FIELD.</p>
+                    VISUAL 3D GAME AND WEBSITE DEVELOPMENT FIELD.</p>
             </div>
             <div class="text-box-1 fade-in-left-12s">
                 <a href="#sec-third" class="text-gray-50 text-sz-sm ">ABOUT <span  class="hover-text-hl">MY PORTFOLIO</span></a>
@@ -108,27 +108,26 @@
         <div class="container-second mx-auto py-7 content-center">
           <h1 class="text-center text-sz-nr text-gray-50">ABOUT ME</h1>
           <div class="justify-center mb-profile-box">
-            <img class="profile_pic" src="/img/headshot_photo_webPort1.png" style="width: 30vw;">
+            <img class="profile_pic" src="/img/headshot_photo_webPort2.png" style="width: 30vw;">
           </div>
           <div class="flex justify-center">
             <div class="flex my-10 gap-10">
               <div class="profile-box">
-                <img class="profile_pic" src="/img/headshot_photo_webPort1.png" style="width: 30vw;">
+                <img class="profile_pic" src="/img/headshot_photo_webPort2.png" style="width: 30vw;">
               </div>
               <div class="grow">
                 <h1 class="header-1"><span class="txt-highlight-3">OBJECTIVE</span></h1>
-                <p class="info">I am a passionate individual with a strong interest in unreal engine, <br> 
-                specifically in the field of game development and unreal engine artist.<br> 
-                I am actively seeking opportunities as a game programmer or <br> 
-                unreal engine artist with well-known studios in Thailand.<br> 
-                I have an energetic approach to learning and enjoy collaborating <br> 
-                with others. My ultimate goal is to make valuable contributions <br> 
-                to the company's projects, while also continuing to grow and develop <br> 
-                my own skills and career within the industry.</p>
+                <p class="info">Hello! I'm Nattawat Chavanit, a passionate developer specializing <br>
+                  in website development, software programming, and game development. <br>
+                  With a strong background in these areas and six months of experience <br>
+                  in game development, I bring fresh perspectives and enthusiasm <br>
+                  to every project. From crafting responsive website to designing efficient <br>
+                  software solutions and immersive games, I thrive on creativity <br>
+                  and problem-solving.</p>
   
                 <h1 class="header-1 mt-5"><span class="txt-highlight-3">PERSONAL DETAILS</span></h1>
                 <p class="info"><span class="info-dot">■</span>   Name &emsp;&emsp;&emsp;&emsp; Nattawat Chavanit</p>
-                <p class="info"><span class="info-dot">■</span>  Age &emsp;&emsp;&emsp;&emsp;&emsp; 22   </p>
+                <p class="info"><span class="info-dot">■</span>  Age &emsp;&emsp;&emsp;&emsp;&emsp; 23   </p>
                 <p class="info"><span class="info-dot">■</span>  DOB &emsp;&emsp;&emsp;&emsp;&emsp; 21/11/2000   </p>
                 <p class="info"><span class="info-dot">■</span>   Nationality&emsp;&emsp; Thai</p>
   
@@ -145,9 +144,9 @@
                 <p class="info-fade"> GPA 3.36</p>
   
                 <h1 class="header-1 mt-5"><span class="txt-highlight-3">INTEREST</span></h1>
-                <p class="interest-item"><span class="box-contain">GAME PROGRAMMING</span><span class="box-contain">PYTHON SCRIPTING</span><span class="box-contain">3D ARTISTIC</span></p>
-                <p class="interest-item"><span class="box-contain">WEB DEVELOPMENT</span><span class="box-contain">VISUAL ART</span><span class="box-contain">3D MODELING</span><span class="box-contain">TEXTURE</span></p>
-                <p class="interest-item"><span class="box-contain">ANIMATION</span><span class="box-contain">VISUAL ART</span><span class="box-contain">3D MODELING</span><span class="box-contain">TEXTURE</span></p>
+                <p class="interest-item"><span class="box-contain">WEBSITE DEVELOPMENT</span><span class="box-contain">PIPELINE DEVELOPMENT</span><span class="box-contain">3D ARTISTIC</span></p>
+                <p class="interest-item"><span class="box-contain">GAME PROGRAMMING</span><span class="box-contain">SOFTWARE PROGRAMMING</span><span class="box-contain">FINANCIAL</span></p>
+                <p class="interest-item"><span class="box-contain">QUALITY ASSURANCE</span><span class="box-contain">PYTHON SCRIPTING</span><span class="box-contain">VIRTUAL ART</span></p>
               </div>  
             </div>
           </div>
