update index about me details

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="text-gray-50 text-sz-sm fade-in-left-1s" style="margin-bottom: 5vh;">WELCOME TO <span class="text-hl">MY PORTFOLIO.</span></p>
                 <p class="text-gray-50 text-sz-sm fade-in-left-12s">
                     I'M YOUNG DEVELOPER WITH A SPACIAL INTEREST IN <br>
-                    VISUAL 3D GAME AND WEBSITE DEVELOPMENT FIELD.</p>
+                    VIRTUAL 3D GAME AND WEBSITE DEVELOPMENT FIELD.</p>
             </div>
             <div class="text-box-1 fade-in-left-12s">
                 <a href="#sec-third" class="text-gray-50 text-sz-sm ">ABOUT <span  class="hover-text-hl">MY PORTFOLIO</span></a>
